--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>MessageMe</title>
+  <%= favicon_link_tag %>
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 
@@ -12,25 +13,7 @@
 <body>
 <div class="ui small inverted menu">
   <div class="ui container">
-    <a class="item">
-      Chatroom
-    </a>
-    <a class="item">
-      Messages
-    </a>
-    <div class="right menu">
-      <div class="ui dropdown item">
-        Account <i class="dropdown icon"></i>
-        <div class="menu">
-          <a class="item">Log out</a>
-          <a class="item">Log in</a>
-          <a class="item">Sign up</a>
-        </div>
-      </div>
-      <div class="item">
-        <div class="ui primary button">Sign Up</div>
-      </div>
-    </div>
+    <%= render 'layouts/navigation' %>
   </div>
 </div>
 <div class="ui container">
