--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -1,5 +1,5 @@
 <h4 class="ui center aligned medium icon header">
-  <i class="circular blue coffee icon"></i>
+  <i class="circular orange coffee icon"></i>
   Say Something
 </h4>
 
@@ -8,48 +8,22 @@
     <div class="ui fluid raised card chatbox">
       <div class="content">
         <div class="ui feed">
-          <div class="event">
-            <div class="content">
-              <div class="summary">
-                <a>Elliot Fu</a> added <a>Jenny Hess</a> as a friend
-              </div>
-            </div>
-          </div>
-          <div class="event">
-            <div class="content">
-              <div class="summary">
-                <a>Stevie Feliciano</a> added <a>Elliot Fu</a> as a friend
-              </div>
-            </div>
-          </div>
-          <div class="event">
-            <div class="content">
-              <div class="summary">
-                <em>Helen Troy</em>: Test message
-              </div>
-            </div>
-          </div>
-          <div class="event">
-            <div class="content">
-              <div class="summary">
-                <em>Christian Rocha</em>: Test message
-              </div>
-            </div>
-          </div>
+          <%= render @messages %>
         </div>
       </div>
       <div class="extra content">
         <form class="ui reply form">
           <div class="field">
             <div class="ui fluid icon input">
-              <input type="text" placeholder="Search users...">
-              <i class="bordered inverted blue edit icon"></i>
+              <input type="text" placeholder="Enter a message...">
+              <i class="bordered inverted orange edit icon"></i>
             </div>
           </div>
         </form>
       </div>
     </div>
   </div>
+
   <div class="four wide column">
     <div class="ui fluid raised card chatbox">
       <div class="content">
