--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -1,5 +1,5 @@
 <h4 class="ui center aligned medium icon header">
-  <i class="circular orange coffee icon"></i>
+  <i class="circular blue coffee icon"></i>
   Say Something
 </h4>
 
@@ -12,14 +12,14 @@
         </div>
       </div>
       <div class="extra content">
-        <form class="ui reply form">
+        <%= form_for(@message, html: {class: "ui reply form"}, url: message_path) do |f| %>
           <div class="field">
             <div class="ui fluid icon input">
-              <input type="text" placeholder="Enter a message...">
-              <i class="bordered inverted orange edit icon"></i>
+              <%= f.text_field :body %>
+              <%= f.button '<i class="bordered inverted blue edit icon"></i>'.html_safe %>
             </div>
           </div>
-        </form>
+        <% end %>
       </div>
     </div>
   </div>
